corpus/cpp/overload/case-07/snapshots/gcc9_12/single_sink_structured/render.default.txt
error: [type_mismatch] invalid conversion from 'const char*' to 'short int' @ src/main.cpp:5:17
raw : invalid conversion from 'const char*' to 'short int'
| src/main.cpp:5:17
|     takes_short("x");
|                 ^~

note: [unknown]   initializing argument 1 of 'void takes_short(short int)' @ src/main.cpp:1:18
note: wrapper confidence is low; verify against the preserved raw diagnostics
raw :   initializing argument 1 of 'void takes_short(short int)'
| src/main.cpp:1:18
| void takes_short(short);
|                  ^~~~